    - Redesigned the preferences dialog
  Bugfixes:
    - Fixed that modded rocket silos were not picked up on correctly

---------------------------------------------------------------------------------------------------
Version: 0.18.48
Date: 02. 08. 2020
  Changes:
    - Redesigned the utility dialog
  Bugfixes:
    - Fixed a crash on migration that happened under very specific circumstances

---------------------------------------------------------------------------------------------------
Version: 0.18.47
Date: 01. 08. 2020
  Changes:
    - Factory Planner now has Factorio Library (flib) as a dependency, to help with the new styling
    - Redesigned the tutorial dialog to be in line with the post-0.17 styling sensibilities
    - Also gave the options- and chooser-dialog types a do-over

---------------------------------------------------------------------------------------------------
Version: 0.18.46
Date: 29. 07. 2020
  Bugfixes:
    - Fixed a migration crash
    - Fixed an issue when importing into your archive
    - Fixed a crash where you could submit the import dialog without having imported a string

---------------------------------------------------------------------------------------------------
Version: 0.18.45
Date: 29. 07. 2020
  Changes:
    - Re-implement the ingredient satisfaction algorithm, solving some weird edge cases and doubling performance
    - The importer now selects all subfactories for import by default, instead of selecting none
    - Added some warning messages when trying to open items/recipes in FNEI/WIIRUF/RB fails
    - Changed the unit that pollution is displayed in from P/second to P/minute
    - Changed how deleting subfactories and recipe lines work, removing the confirmation step
    - Changing machines on recipes now also opens up a dialog instead of presenting the choices in-line; An alternative to this is shift/ctrl-clicking the machine to up/downgrade it
    - Removed the 'Indicate rounding' mod setting