@@ -7,6 +7,7 @@ Date: 00. 00. 0000
     - Removed the ability to manually order top level ingredients and byproducts, the same goes for any recipe line items. This was done for two reasons: Firstly, it was not very useful as they shifted around all the time anyways when new recipes are added or removed. Secondly, this frees up some key combinations for more useful actions, like the one above.
     - Redesigned the preferences dialog
   Bugfixes:
+    - Fixed that the dialog to change machine would sometimes highlight the wrong machine as being selected
     - Fixed that modded rocket silos were not picked up on correctly
 
 ---------------------------------------------------------------------------------------------------
